--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,11 +5,11 @@ name: demo-action
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  # push:
-  #   branches: main
+  push:
+    branches: main
     
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,5 +24,6 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: build=artifact
-        path: ${{github.workspace}}
+      - name: Run a one-line script
+        run: echo Hello, world!
+
